fix name on packagejson

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Forge Catalog",
+  "name": "autodesk forge catalog",
   "version": "1.0.0",
   "description": "",
   "dependencies": {
